--- a/warsztaty/porfolio/index.html
+++ b/warsztaty/porfolio/index.html
@@ -4,27 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Projekt portfolio</title>
 
-    <!--    Fonts     -->
+    <!--   https://fontawesome.com/start     -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+    <!--    Google fonts     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=latin-ext" rel="stylesheet">
 
-    <!--    Reset Style     -->
+    <!--    Normalize CSS cdnjs.com     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-    <!--    Main Style     -->
+    <!--    Custom Style     -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
-
-    <header id="header">
-        <div class="header-content">
+    <!--Header-->
+    <header class="main-header">
+        <div class="main-header-content">
             <h1>Front end developer</h1>
-            <p>html <span>&#8226;</span> css <span>&#8226;</span> JavaScript</p>
+            <hr>
+            <p>html <span>&#8226;</span> css <span>&#8226;</span> JavaScript</p> <!--html symbols >> https://www.toptal.com/designers/htmlarrows/punctuation/bullet/-->
+            <a href="#" class="btn">Dowiedz się więcej</a>
         </div>
     </header>
+
 
     <nav id="menu"></nav>
 
