JS-DOM-c.d.-ostatnie przykłady

--- a/examples/js-dom/index.html
+++ b/examples/js-dom/index.html
@@ -56,7 +56,7 @@
         
     </section>
 
-    <script src="js/6-events.js"></script>
+    <script src="js/add-user-script.js"></script>
 </body>
 
 </html>
