--- a/warsztaty/2-ustaw-tekst/index.html
+++ b/warsztaty/2-ustaw-tekst/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  
- <!-- Napisz skrypt, który po kliknięciu w przycisku zmieni jego tekst na "Zmieniono" -->
+ <!-- Napisz skrypt, który po kliknięciu w przycisk zmieni jego tekst na "Zmieniono" -->
   
   <button>Kliknij aby zmienić</button>
    
