--- a/warsztaty/porfolio/index.html
+++ b/warsztaty/porfolio/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--meta:vp - skrót emmeta-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt portfolio</title>
 
-    <!--   https://fontawesome.com/start     -->
+    <!--   https://fontawesome.com/start  - dodane ze względu na obecność ikonek np. Facebooka >> fab fa-facebook   -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!--    Google fonts     -->
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
     <!--    Custom Style     -->
+    <!--link:css - skrót emmeta-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
