Ostatnie poprawki do zadania: 1-lista-miast - Zadanie #13607

--- a/examples/jquery/index.html
+++ b/examples/jquery/index.html
@@ -37,8 +37,8 @@
 <!--<script src="js/2-selectors.js"></script>-->
 <!--<script src="js/3-dom-manipulation.js"></script>-->
 <!--<script src="js/4-each-loop.js"></script>-->
-<!--<script src="js/5-events.js"></script>-->
-<script src="js/6-animations.js"></script>
+<script src="js/5-events.js"></script>
+<!--<script src="js/6-animations.js"></script>-->
 
 
 </body>
