--- a/zadania-domowe/1-lista-miast - Zadanie #13607/index.html
+++ b/zadania-domowe/1-lista-miast - Zadanie #13607/index.html
@@ -15,7 +15,7 @@
     <button id="sortCities">Posortuj miasta</button>
     <button id="backSortCities">Cofnij</button>
 
-    <script src="js/main1.js"></script>
+    <script src="js/main1a.js"></script>
 </body>
 
 </html>
