--- a/zadania-domowe/4-odliczanie - Zadanie #13498/index.html
+++ b/zadania-domowe/4-odliczanie - Zadanie #13498/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+   
+<!--   div>p[id=no$]{$}*10 -->
+   <div>
+       <p id="no1">1</p>
+       <p id="no2">2</p>
+       <p id="no3">3</p>
+       <p id="no4">4</p>
+       <p id="no5">5</p>
+       <p id="no6">6</p>
+       <p id="no7">7</p>
+       <p id="no8">8</p>
+       <p id="no9">9</p>
+       <p id="no10">10</p>
+   </div>
+    
+<!--       <p id="no6">I love CSS :)</p>--> <!--ODBLOKUJ jak będzie gotowa animacja-->
     
 </body>
 </html>
