--- a/examples/css/flexbox/index.html
+++ b/examples/css/flexbox/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <!--    Mai <style></style>-->
+    <!--    Main <style></style>-->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
