Ostateczna wersja zadania >> 5-layout-flex-box - Zadanie #13508

--- a/zadania-domowe/5-layout-flex-box - Zadanie #13508/index.html
+++ b/zadania-domowe/5-layout-flex-box - Zadanie #13508/index.html
@@ -20,13 +20,13 @@
             <p>Header</p>
         </header>
 
-        <article class="main">
+        <article class="article">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, consequuntur. A recusandae unde praesentium quia natus adipisci velit, temporibus inventore modi. Accusamus in velit provident aliquid animi explicabo quidem dolorem.</p>
         </article>
 
-        <aside class="aside asideLeft">Aside left</aside>
+        <aside class="aside asideLeft"><p>Aside left</p></aside>
 
-        <aside class="aside asideRight">Aside right</aside>
+        <aside class="aside asideRight"><p>Aside right</p></aside>
 
         <footer class="footer">
             <p>Footer</p>
