--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>pierwszy paragraf</p>
+    <p><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/"></a></p>
     <p>drugi paragraf</p>
     <p>trzeci paragraf</p>
     <p>czwarty paragraf</p>
