--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/"></a></p>
-    <p>drugi paragraf</p>
-    <p>trzeci paragraf</p>
-    <p>czwarty paragraf</p>
-    <p>piaty paragraf</p>
+    
+    <h1>My pages</h1>
+    
+    <p>First pages</p> <a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/"></a>
+
 </body>
 </html>
