--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <h1>My pages</h1>
     
-    <p>First pages</p> <a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/"></a>
+    <p>First page: </p> <a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/"></a>
 
 </body>
 </html>
