--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         
     <h1>My pages</h1>
     
-    <p>My first page</p> <p><a href="https://przemyslawskrzyniarz.github.io/LESS-project/">Less project</a></p>
-    <p>My second page</p> <p><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/">Flex box system - responsive (RWD)</a></p>
-    <p>My third page</p> <p><a href="https://przemyslawskrzyniarz.github.io/rwd/">RWD</a></p>
+    <p>My first page</p><span><a href="https://przemyslawskrzyniarz.github.io/LESS-project/">Less project</a></span>
+    <p>My second page</p><span><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/">Flex box system - responsive (RWD)</a></span>
+    <p>My third page</p><span><a href="https://przemyslawskrzyniarz.github.io/rwd/">RWD</a></span>
 
 </body>
 </html>
