--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         
     <h1>My pages</h1>
     
-    <span>My first page</span><span><a href="https://przemyslawskrzyniarz.github.io/LESS-project/">Less project</a></span>
-    <span>My second page</span><span><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/">Flex box system - responsive (RWD)</a></span>
-    <span>My third page</span><span><a href="https://przemyslawskrzyniarz.github.io/rwd/">RWD</a></span>
+    <ul>
+        <li><span><a href="https://przemyslawskrzyniarz.github.io/LESS-project/">Less project</a></span></li>
+        <li><span><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/">Flex box system - responsive (RWD)</a></span></li>
+        <li><span><a href="https://przemyslawskrzyniarz.github.io/rwd/">RWD</a></span></li>
+    </ul>
 
 </body>
 </html>
