--- a/warsztaty/Landing_Pages_Finanse/app/index.html
+++ b/warsztaty/Landing_Pages_Finanse/app/index.html
@@ -43,7 +43,7 @@
                     Zostaw <span class="important-text"> sprawy finansowe </span> nam
                     <span class="important-text">skup się na swoim biznesie</span>
                 </h2>
-                <form action="" class="main-form">
+                <form action="post" class="main-form">
                     <fieldset>
                         <h3>Zostaw swoje dane, a my się z Tobą skontaktujemy</h3>
                         <input type="text" name="name" placeholder="Imię i nazwisko" required>
@@ -69,7 +69,7 @@
                 <span class="footer-item-envelope">kursy@akademia108.pl</span>
             </div>
         </div>
-        <div class="cntainer">
+        <div class="container">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A hic magnam adipisci vero fugit voluptatem, accusantium dolor debitis, tempore sint quia blanditiis recusandae alias. Perspiciatis illum quasi adipisci quaerat, ut?</p>
         </div>
     </footer>
