--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><span><a href="https://przemyslawskrzyniarz.github.io/LESS-project/">Less project</a></span></li>
         <li><span><a href="https://przemyslawskrzyniarz.github.io/layout-flex-box/">Flex box system - responsive (RWD)</a></span></li>
         <li><span><a href="https://przemyslawskrzyniarz.github.io/rwd/">RWD</a></span></li>
+        <li><span><a href="https://przemyslawskrzyniarz.github.io/faq-bootstrap/">FAQ in bootstrap</a></span></li>
     </ul>
 
 </body>
